# abs_admin

./: Cargo.toml  README_CH.md  api.http  gen.py
src/: lib.rs  main.rs
src/config/: config.rs
src/controller/: sys_dict_controller.rs  sys_res_controller.rs
src/domain/: mod.rs
src/domain/core/: mod.rs  tables.rs
src/domain/dto/: dict.rs  res.rs  role.rs  user.rs
src/domain/persistence/: sys_dict.rs  sys_res.rs  sys_role.rs  sys_role_res.rs  sys_trash.rs  sys_user.rs  sys_user_role.rs
src/domain/vo/: dict.rs  res.rs  role.rs  sign_in.rs  user.rs
src/interface/: mod.rs  rest.rs
src/interface/grpc/: Cargo.toml  init.sh  makefile
src/interface/grpc/src/: lib.rs
src/interface/grpc/volo-gen/: Cargo.toml  build.rs  volo.yml
src/service/: cache_service.rs  mod.rs  sys_dict_service.rs  sys_res_service.rs  sys_role_res_service.rs  sys_role_service.rs  sys_sms_service.rs  sys_trash_service.rs  sys_user_role_service.rs  sys_user_service.rs
